# CT_LPCXpresso55S69_Hello

./: .gitignore  CMakeLists.txt  flags.cmake  hello_world.mex
board/: peripherals.c  pin_mux.c
component/lists/: component_lists_LPC55S69_cm33_core0.cmake
component/uart/: component_usart_adapter_LPC55S69_cm33_core0.cmake
device/: device_LPC55S69_CMSIS_LPC55S69_cm33_core0.cmake  device_LPC55S69_system_LPC55S69_cm33_core0.cmake
drivers/: driver_clock_LPC55S69_cm33_core0.cmake  driver_common_LPC55S69_cm33_core0.cmake  driver_flexcomm_LPC55S69_cm33_core0.cmake  driver_flexcomm_usart_LPC55S69_cm33_core0.cmake  driver_lpc_gpio_LPC55S69_cm33_core0.cmake  driver_lpc_iocon_LPC55S69_cm33_core0.cmake  driver_power_LPC55S69_cm33_core0.cmake  driver_reset_LPC55S69_cm33_core0.cmake
startup/: device_LPC55S69_startup_LPC55S69_cm33_core0.cmake
trustzone/: resource_config.c
utilities/: fsl_sbrk.c  utility_assert_lite_LPC55S69_cm33_core0.cmake  utility_debug_console_lite_LPC55S69_cm33_core0.cmake
